issue with aligning logo and text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ body{
     width: 800px;
     margin-top: 50px;
     text-align: center;
+    align-items: center;
 }
 
 .card{
@@ -23,5 +24,14 @@ body{
   'FILL' 0,
   'wght' 400,
   'GRAD' 0,
-  'opsz' 24
+  'opsz' 24;
+  font-size: 40px;
 }
+/* 
+.icon{
+    display: flex;
+    margin: auto;
+    justify-content: center;
+    text-align: center;
+    padding: 70px 0;
+} */
